# drizzle

./: .clang-format  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .ruff.toml  .travis.yml  CHANGELOG.rst  CHANGES.rst  MANIFEST.in  README.rst  appveyor.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml  ci.yml  drizzle_ci.yml  publish.yml  test_build.yml
_images/: inheritance-5a8359d2d361f0fcde57ee68f3f4e8e72a745b13.png.map  inheritance-a67453b055a21c216fdf77c0ed4443984343f591.png.map
_modules/: index.html
_modules/drizzle/: doblot.html  dodrizzle.html  drizzle.html
_sources/api/: drizzle.dodrizzle.dodrizzle.txt  drizzle.drizzle.Drizzle.txt
api/: drizzle.doblot.doblot.html  drizzle.dodrizzle.dodrizzle.html  drizzle.drizzle.Drizzle.html
docs/: conf.py  index.rst  rtd-pip-requirements  rtd_environment.yaml
docs/drizzle/: algorithms.rst  api.rst  index.rst  user.rst
docs/exts/: numfig.py
doctrees/: index.doctree
doctrees/api/: drizzle.doblot.doblot.doctree  drizzle.dodrizzle.dodrizzle.doctree  drizzle.drizzle.Drizzle.doctree
doctrees/drizzle/: api.doctree  index.doctree  user.doctree
drizzle/: __init__.py  _astropy_init.py  api.html  calc_pixmap.py  conftest.py  doblot.py  dodrizzle.py  drizzle.py  index.html  resample.py  setup_package.py  user.html  util.py  utils.py
drizzle/src/: arrdrizmodule.c  cdrizzleapi.c  cdrizzleblot.c  cdrizzleblot.h  cdrizzlebox.c  cdrizzlebox.h  cdrizzlemap.c  cdrizzlemap.h  cdrizzleutil.c  cdrizzleutil.h  driz_portability.h
drizzle/src/tests/: drizzletest.h  pandokia_fct.h  utest_cdrizzle.c  utest_cdrizzlepac.c
drizzle/tests/: helpers.py  test_cdrizzle.py  test_drizzle.py  test_drizzlepac.py  test_file_io.py  test_overlap_calc.py  test_pixmap.py  test_resample.py  test_utils.py
drizzle/tests/data/: difference_blot_default.txt  difference_blot_grid.txt  difference_blot_lan3.txt  difference_blot_lan5.txt  difference_blot_point.txt  difference_gaussian_grid.txt  difference_lanczos_grid.txt  difference_point_grid.txt  difference_square_grid.txt  difference_square_point.txt  difference_tophat_grid.txt  difference_turbo_grid.txt  j8bt06nyq_sip_flt.fits  nrcb5_output_wcs_psr_0p55.hdr  nrcb5_output_wcs_psr_1p0.hdr  nrcb5_output_wcs_psr_1p2.hdr  nrcb5_sip_wcs.hdr  reference_drizzlepac_gaussian_drz_sci.fits  reference_drizzlepac_lanczos3_drz_sci.fits  reference_drizzlepac_point_drz_sci.fits  reference_drizzlepac_square_drz_sci.fits  reference_drizzlepac_turbo_drz_sci.fits  test_drizzlepac_flt.fits  test_drizzlepac_pixmap.fits
html/: .buildinfo  genindex.html  py-modindex.html  search.html  searchindex.js
html/_modules/: index.html
html/_sources/: index.txt
html/_sources/api/: drizzle.doblot.doblot.txt
html/_sources/drizzle/: index.txt
html/api/: drizzle.drizzle.Drizzle.html
html/drizzle/: api.html  user.html
src/: cdrizzleapi.c  cdrizzleblot.c  cdrizzleblot.h  cdrizzlebox.c  cdrizzlebox.h  cdrizzlemap.c  cdrizzlemap.h  cdrizzleutil.c  cdrizzleutil.h  driz_portability.h
src/tests/: drizzletest.h  fct.h  pandokia_fct.h  utest_cdrizzle.c
src/tests/cextern/: .clang-format  pandokia_fct.h
