[metadata]
name = drizzle
description = A package for combining dithered images into a single image
long_description = A package for combining dithered images into a single image
author = STScI
author_email = help@stsci.edu
license = BSD-3-Clause
url = https://github.com/spacetelescope/drizzle
project_urls =
    Bug Tracker = https://github.com/spacetelescope/drizzle/issues
    Documentation = http://spacetelescope.github.io/drizzle/
    Source Code = https://github.com/spacetelescope/drizzle

[options]
zip_safe = False
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
    cython
    astropy
packages = find:

[options.extras_require]
test =
    pytest>=4.6.0
    pytest-cov
    coverage
    flake8>=3.6.0
docs =
    matplotlib
    sphinx
    sphinx-automodapi

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[flake8]
max-line-length = 160
select =
    F,
    E101,
    E111,
    E112,
    E113,
    E401,
    E402,
    E711,
    E722

[tool:pytest]
minversion = 4.6
norecursedirs = build docs/_build
doctest_plus = enabled
